[package]
name = "muteMic"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Console",
]

# single-key input will use the C runtime `_getch` on Windows; no extra crate needed
